Add ImageList page and ImageShow page

--- a/imagestore/Views/Image/Upload.cshtml
+++ b/imagestore/Views/Image/Upload.cshtml
@@ -63,7 +63,7 @@
 
         <li>
             <div class="form-check">
-                <input class="form-check-input public-upload" type="checkbox" asp-for="IsPublic">
+                <input class="form-check-input public-upload" type="checkbox" checked asp-for="IsPublic">
                 <label class="form-check-label" asp-for="IsPublic">
                     Public
                 </label>
