--- a/imagestore/Views/Shared/_Layout.cshtml
+++ b/imagestore/Views/Shared/_Layout.cshtml
@@ -16,7 +16,7 @@
     <link href="~/lib/fontawesome/css/all.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="~/css/site.css" />
 </head>
-<body>
+<body onselectstart='return false;'>
     <header>
         <nav class="navbar navbar-expand-lg navbar-light bg-white">
             <div class="container">
@@ -49,6 +49,7 @@
 
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="~/lib/rxjs/rxjs.umd.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
     @RenderSection("Scripts", required: false)
 </body>
