--- a/imagestore/Views/Shared/_Layout.cshtml
+++ b/imagestore/Views/Shared/_Layout.cshtml
@@ -33,9 +33,8 @@
                         <li class="nav-item mr-5">
                             <a class="nav-link" asp-action="Index" asp-controller="Home">Home</a>
                         </li>
-                        <li class="nav-item nav-item-login">
-                            <a asp-action="Login" asp-controller="Account" class="nav-link" style="color: black">Login</a>
-                        </li>
+                        
+                        <partial name="_LoginPartial" />
                     </ul>
                 </div>
             </div>
