--- a/imagestore/Views/Account/Login.cshtml
+++ b/imagestore/Views/Account/Login.cshtml
@@ -1,6 +1,6 @@
 ﻿@model imagestore.ViewModels.LoginViewModel
 @{
-    ViewData["title"] = "Login Page";
+    ViewData["title"] = "Login";
 }
 
 <div class="login-wrapper text-center">
