--- a/imagestore/Views/Account/Register.cshtml
+++ b/imagestore/Views/Account/Register.cshtml
@@ -1,6 +1,6 @@
 ﻿@model imagestore.ViewModels.RegisterViewModel
 @{
-    ViewData["title"] = "Register Page";
+    ViewData["title"] = "Register";
 }
 
 <div class="register-wrapper text-center">
