--- a/imagestore/Views/Manage/Index.cshtml
+++ b/imagestore/Views/Manage/Index.cshtml
@@ -1,4 +1,7 @@
-﻿
+﻿@{ 
+    ViewData["title"] = User.Identity.Name + " - User Manager";
+}
+
 <h1 class="title mb-5">user manager</h1>
 
 <div class="d-flex justify-content-between">
