--- a/imagestore/Views/Shared/_Layout.cshtml
+++ b/imagestore/Views/Shared/_Layout.cshtml
@@ -3,7 +3,9 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - imagestore</title>
+    <title>@ViewData["Title"] - Stimage</title>
+
+    <link rel="icon" type="image/svg" href="~/images/logo.svg">
 
     <link href="~/lib/normalize/normalize.min.css" rel="stylesheet" />
 
@@ -40,11 +42,14 @@
             </div>
         </nav>
     </header>
+
     <div class="container">
-        <main class="pb-3">
+        <main class="pb-3" style="min-height: 100vh;">
             @RenderBody()
         </main>
     </div>
+
+    <footer>Here's footer</footer>
 
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
