--- a/imagestore/wwwroot/css/site.css
+++ b/imagestore/wwwroot/css/site.css
@@ -226,6 +226,7 @@
     cursor: pointer;
     position: relative;
     overflow: hidden;
+    padding: 5px;
 }
 
 .imagem-item:hover {
@@ -301,6 +302,11 @@
     background-repeat: no-repeat;
 }
 
+.imagem-title {
+    font-size: 20px;
+    font-weight: bold;
+}
+
 
 
 /* Responsive web */
@@ -312,11 +318,11 @@
 
 @media only screen and (max-width: 480px) {
     .imagem-item{
-        flex-basis: 80%;
+        flex-basis: 70%;
     }
 
     .image-add-new {
-        flex-basis: 80%;
+        flex-basis: 70%;
     }
 }
 
