--- a/imagestore/wwwroot/css/site.css
+++ b/imagestore/wwwroot/css/site.css
@@ -326,3 +326,33 @@
     }
 }
 
+/* footer */
+.footer {
+    border-top: 1px solid black;
+    padding-top: 10px;
+}
+
+.footer-image {
+    width: 60px;
+}
+
+.footer-copyright{
+    letter-spacing: 2px;
+    font-weight: 500;
+}
+
+.list-nav {
+    list-style-type: none;
+}
+
+.botnav-item {
+    color: black;
+    text-decoration: none;
+    cursor:pointer;
+    transition: 0.3s;
+}
+
+.botnav-item:hover {
+    text-decoration: underline;
+    color: black;
+}
