--- a/imagestore/Views/Home/Index.cshtml
+++ b/imagestore/Views/Home/Index.cshtml
@@ -3,6 +3,8 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-4" style="font-weight:700; letter-spacing: 3px;">Welcome to Stimage</h1>
+    <p>
+        <button type="button" class="btn btn-warning" onclick="location.href = '/Image/Manager';">Upload now!</button>
+    </p>
 </div>
